// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectPageSection ObjectPage w/ lowercase title 1`] = `
<DocumentFragment>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header"
      role="heading"
    >
      <div
        class="ObjectPageSection-title"
      >
        Test
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent"
    >
      <div
        class="ObjectPageSection-sectionContentInner"
      >
        This is my Text
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ObjectPageSection Renders with children 1`] = `
<DocumentFragment>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header"
      role="heading"
    >
      <div
        class="ObjectPageSection-title ObjectPageSection-uppercase"
      >
        Test
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent"
    >
      <div
        class="ObjectPageSection-sectionContentInner"
      >
        This is my Text
      </div>
    </div>
  </section>
</DocumentFragment>
`;
